--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
     />
     <link
       rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
+    />
+    <link
+      rel="stylesheet"
       type="text/css"
       href="./index_files/jquery-ui-bootstrap.css"
     />
@@ -67,12 +71,22 @@
       <div id="yw0"></div>
       <div class="jumbotron">
         <h1>
-          <span class="fa fa-exclamation-triangle text-danger"></span>
+          <i class="bi bi-check-all text-success"></i>
           <span class="text-success">Fernando Soares Macedo</span>
         </h1>
-        <p class="lead text-success">
-          Código de controle do comprovante:1RMS-Z23E-ABZF-2Z1Q-7XWY
+        <p class="lead text-black">Semestre matriculado: 2023.3</p>
+        <p class="lead text-black">
+          Comprovante emitido às 22:14:00 do dia 05/08/2023
         </p>
+        <p class="lead text-black">
+          Código de controle do comprovante: 1RMS-Z23E-ABZF-2Z1Q-7XWY
+        </p>
+      </div>
+      <div class="lead text-muted text-right">
+        <p>Fortaleza, 05 de Agosto de 2023.</p>
+        <p>Departamento de Assuntos Acadêmicos</p>
+        <p>Centro Universitário Farias Brito</p>
+        <p>CNPJ: 74.000.738/0006-08</p>
       </div>
     </div>
 
